# robot-gherkin-style

./: .gitignore  LICENSE  README.md  log.html  output.xml  pyproject.toml  report.html
Assignment 3/: sorting.py
output/allure/: 02fccfeb-b287-48c7-8858-b35e163adfa9-result.json  0324967f-6e21-463f-a1b1-7af62ac8e5d6-result.json  03ee117a-a42e-4b97-8dc3-2e6dd166cc13-result.json  054b1db4-7e2c-40b1-8cc1-1427d1158f70-result.json  074ee9b9-a436-408a-973d-7e6174df7a3e-result.json  08580584-3050-48c0-b5c0-5576948aebe2-attachment.html  08cab4fe-554f-43c1-9d97-562318375977-attachment.html  0a2071a6-7f83-4a94-a43f-a350d549096e-attachment.html  0a2ce768-222a-4fbe-a66f-f364326c53a7-result.json  0dad1abf-7a64-4799-aeaa-bf7e59254af9-attachment.html  0df5699e-ab70-4442-b6a4-9ba445aae647-attachment.html  0f531186-ed83-46cc-8d2c-f1954f91b839-result.json  13491971-9071-4cd4-a2aa-479513b3f45c-attachment.html  134f9d5c-6ad1-4b7f-9a48-4c4a618e8476-attachment.html  14e55099-777f-41de-ab5d-12a8ffb78762-result.json  18a2aa5a-0d5d-480f-b24e-a0660a6db58a-attachment.html  194ad8a1-f190-42c3-a89b-e60a0af4b138-attachment.html  1a9b41dd-5bef-4f37-b0ed-d510e43278c8-result.json  2162bfcf-10fb-4ead-84ee-f026657531c0-attachment.html  25044a92-e143-45c9-a07f-8878c2d9171a-attachment.html  29fccc49-3942-4ec0-8f42-d4266874a4e0-attachment.html  2ad5f23d-b78b-405d-b9af-2a1c0d1c1b1e-result.json  2b8938e6-97c2-4291-bf22-ef2c5f188019-attachment.html  2ceb417d-1911-4930-a807-9dee08b9f6a3-container.json  (+96 more)
reports/: log.html  output.xml  report.html
robot_project/: .pabotsuitenames  run_tests.py
(+18 files in other folders)
